# grz-service-oex

./: .gitignore  Dockerfile  manage.py  manage.sh  pyproject.toml  run.sh  run_local.sh
config/: asgi.py  celery_app.py  urls.py  wsgi.py
config/settings/: base.py  local.py  production.py
docker/local/django/: Dockerfile
docker/production/: entrypoint
fast_api/adapters/: banner.py  config.py  exhibition.py  space.py  user.py
fast_api/api/v1/: api.py
fast_api/api/v1/endpoints/: banner.py  config.py  exhibition.py  msg.py  space.py  user.py
fast_api/schemas/: banner.py  exhibition.py  msg.py  space.py  user.py
grz_service_oex/oex/: admin.py  apps.py  fake_factory.py  models.py
grz_service_oex/oex/fixtures/: linktype.json
grz_service_oex/oex/migrations/: 0001_initial.py  0002_config.py  0003_alter_space_tags.py  0004_taggedthrough.py  0005_auto_20211213_1537.py  0006_auto_20211215_1534.py  0007_genericstringtaggeditem_is_strike_through.py  0008_auto_20211215_2103.py  0009_auto_20211216_1301.py  0010_auto_20211216_1842.py  0011_rename_name_workspaceposition_title.py  0012_rename_display_space_workspaceposition_work_space.py  0013_alter_work_price.py  0014_auto_20220227_1727.py  0015_auto_20220505_1843.py  0016_auto_20220710_0514.py  0017_auto_20220710_2252.py  0018_message_messagethread.py  0019_alter_message_msg_type.py  0020_alter_message_title.py
grz_service_oex/user/: admin.py  apps.py  models.py
grz_service_oex/user/migrations/: 0001_initial.py
