[tool.poetry]
name = "grz-service-oex"
version = "0.1.0"
description = "GRZ Service - One Exhibition"
authors = ["Eric Lee <ericstone.dev@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.2.9"
requests = "^2.26.0"
fastapi = "^0.70.0"
uvicorn = {extras = ["standard"], version = "^0.15.0"}
django-environ = "^0.8"
django-model-utils = "^4.2"
redis = "^3.5.3"
django-redis = "^5.1.0"
django-cors-headers = "^3.7.0"
argon2-cffi = "^20.1.0"
django-storages = "^1.11.1"
boto3 = "^1.17.10"
psycopg2-binary = "^2.9.1"
whitenoise = "^5.2.0"
shortuuid = "^1.0.1"
Pillow = "^8.2.0"
python-slugify = "^4.0.1"
django-filter = "^2.4.0"
django-taggit = "^2.0.0"
djangorestframework = "^3.12.4"
pandas = "^1.2.4"
xlrd = "^2.0.1"
openpyxl = "^3.0.7"
python-multipart = "^0.0.5"
celery = "^5.1.2"
django-celery-beat = "^2.2.1"
django-celery-results = "^2.2.0"
httpx = "^0.21.0"
ks-shared = {git = "https://github.com/ericstone57/ks_shared.git", rev = "main"}
djantic = "^0.4.1"

[tool.poetry.dev-dependencies]
django-debug-toolbar = "^3.2"
django-extensions = "^3.1.1"
factory-boy = "^3.2.0"
jupyterlab = "^3.0.16"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
